--- a/index.html
+++ b/index.html
@@ -3,235 +3,240 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login Produk - HanzyyOffc</title>
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <title>Hanzyy Produk</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    :root {
-      --bg: #0e0e0e;
-      --text: #fff;
-      --primary: #00ffcc;
-      --pink: #ff66ff;
-    }
-
     body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      overflow-x: hidden;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0e0e0e url('https://i.ibb.co/r0pY3Lt/bg-particles.gif') center/cover no-repeat;
+      color: #fff;
+      padding: 20px;
     }
-
-    #particles-js {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      z-index: 0;
+    h1, h2 { text-align: center; color: #00ffc8; }
+    .box {
+      max-width: 800px;
+      margin: 20px auto;
+      background: rgba(255,255,255,0.05);
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 0 20px #00ffc833;
     }
-
-    .login-panel, .produk-panel {
-      position: relative;
-      z-index: 2;
-      min-height: 100vh;
+    .produk-item, .keranjang-item {
+      background: rgba(255,255,255,0.05);
+      padding: 10px;
+      margin: 8px 0;
+      border-radius: 10px;
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
-      padding: 20px;
-      animation: fadeIn 1s ease-in-out;
     }
-
-    .glass-box {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 20px;
-      padding: 40px 30px;
-      backdrop-filter: blur(18px);
-      box-shadow: 0 0 25px rgba(0, 255, 204, 0.2);
-      text-align: center;
-      max-width: 400px;
-      width: 100%;
-    }
-
-    input[type="text"] {
-      padding: 12px;
-      width: 100%;
+    .btn {
+      padding: 6px 12px;
+      background: #00ffc8;
+      color: #000;
       border: none;
-      border-radius: 12px;
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
-      font-size: 1rem;
-      margin-bottom: 20px;
-      outline: none;
-      border: 1px solid var(--primary);
-    }
-
-    .btn-modern {
-      padding: 14px 24px;
-      background: linear-gradient(135deg, #00ffcc, #00bfa6);
-      color: black;
+      border-radius: 8px;
+      cursor: pointer;
       font-weight: bold;
-      font-size: 1rem;
+      margin-left: 5px;
+    }
+    .btn:hover { opacity: 0.85; }
+    input[type="date"], input[type="text"] {
+      padding: 10px;
+      margin: 5px;
+      border-radius: 8px;
       border: none;
-      border-radius: 50px;
-      cursor: pointer;
-      box-shadow: 0 0 15px #00ffcc, 0 0 25px #00ffcc50;
-      transition: 0.3s;
+      width: 45%;
     }
-
-    .btn-modern:hover {
-      background: linear-gradient(135deg, #00bfa6, #00ffcc);
-      box-shadow: 0 0 20px #00ffcc, 0 0 35px #00ffcc50;
-    }
-
-    .produk-panel {
-      flex-direction: column;
-      display: none;
+    #namaUser, #namaTampil {
       text-align: center;
+      color: #00ffc8;
     }
-
-    .produk-list {
-      margin-top: 30px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      max-width: 900px;
-      width: 100%;
-      padding: 0 20px;
-    }
-
-    .produk-item {
-      background: rgba(255, 255, 255, 0.07);
-      padding: 20px;
-      border-radius: 12px;
-      transition: 0.3s;
-    }
-
-    .produk-item:hover {
-      background: rgba(255, 255, 255, 0.12);
-      transform: scale(1.03);
-    }
-
-    .produk-item h3 {
-      margin-bottom: 10px;
-      font-size: 1.1rem;
-    }
-
-    #gantiNamaBtn {
-      background: linear-gradient(135deg, var(--pink), #ff33aa);
-      color: white;
-      margin-bottom: 20px;
-      box-shadow: 0 0 12px var(--pink);
-      font-size: 0.9rem;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-    }
-
-    #gantiNamaBtn:hover {
-      box-shadow: 0 0 20px var(--pink);
-    }
-
-    @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
-    }
+    canvas { background: #1a1a1a; border-radius: 15px; padding: 10px; }
   </style>
 </head>
 <body>
 
-<div id="particles-js"></div>
-
-<!-- LOGIN PANEL -->
-<div class="login-panel" id="loginPanel">
-  <div class="glass-box">
-    <h2>👤 Masukkan Nama Anda</h2>
-    <input type="text" id="inputNama" placeholder="Contoh: Hanzy" />
-    <button class="btn-modern" onclick="submitNama()">🚀 Masuk</button>
-  </div>
+<div class="box" id="loginBox">
+  <h2>Masukkan Nama Anda</h2>
+  <input type="text" id="namaUser" placeholder="Nama Anda" />
+  <button class="btn" onclick="login()">Masuk</button>
 </div>
 
-<!-- HALAMAN PRODUK -->
-<div class="produk-panel" id="produkPanel">
-  <button id="gantiNamaBtn" onclick="gantiNama()">🔁 Ganti Nama</button>
-  <h1>👋 Selamat datang, <span id="userNameLabel"></span>!</h1>
-
-  <div class="produk-list" id="produkList">
-    <!-- Produk diisi via JS -->
-  </div>
+<div class="box" id="produkBox" style="display:none;">
+  <h2>Selamat datang, <span id="namaTampil"></span> 👋</h2>
+  <h3>Daftar Produk</h3>
+  <div id="produkList"></div>
+  <hr/>
+  <h3>Keranjang</h3>
+  <div id="keranjangList"></div>
+  <div id="diskonInfo"></div>
+  <button class="btn" onclick="checkout()">Checkout via WhatsApp</button>
 </div>
 
+<div class="box" id="statistikBox" style="display:none;">
+  <h2>📊 Statistik Penjualan</h2>
+  <input type="date" id="fromDate" />
+  <input type="date" id="toDate" />
+  <button class="btn" onclick="filterStatistik()">Tampilkan</button>
+  <canvas id="chartPenjualan" height="120"></canvas>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-particlesJS("particles-js", {
-  particles: {
-    number: { value: 60, density: { enable: true, value_area: 800 }},
-    color: { value: "#ffffff" },
-    shape: { type: "circle" },
-    opacity: { value: 0.4 },
-    size: { value: 3, random: true },
-    line_linked: {
-      enable: true, distance: 150,
-      color: "#ffffff", opacity: 0.3, width: 1
-    },
-    move: { enable: true, speed: 2 }
-  },
-  interactivity: {
-    events: {
-      onhover: { enable: true, mode: "grab" }
-    },
-    modes: { grab: { distance: 200, line_linked: { opacity: 1 } } }
-  },
-  retina_detect: true
+const produk = [
+  { nama: "Script WA Bot", harga: 50000 },
+  { nama: "Panel Pembayaran", harga: 75000 },
+  { nama: "Obfuscator JS", harga: 60000 },
+  { nama: "Panel Produk", harga: 45000 }
+];
+let keranjang = [];
+let namaUser = '';
+
+function login() {
+  const nama = document.getElementById("namaUser").value.trim();
+  if (!nama) return alert("Nama wajib diisi");
+  namaUser = nama;
+  document.getElementById("namaTampil").innerText = nama;
+  document.getElementById("loginBox").style.display = "none";
+  document.getElementById("produkBox").style.display = "block";
+  document.getElementById("statistikBox").style.display = "block";
+  renderProduk();
+}
+
+function renderProduk() {
+  const list = document.getElementById("produkList");
+  list.innerHTML = "";
+  produk.forEach((p, i) => {
+    const el = document.createElement("div");
+    el.className = "produk-item";
+    el.innerHTML = `
+      <span>${p.nama} - Rp${p.harga.toLocaleString()}</span>
+      <div>
+        <button class="btn" onclick="tambahKeranjang(${i})">+ Keranjang</button>
+        <button class="btn" style="background: #00c851;" onclick="beliLangsung(${i})">Beli</button>
+      </div>
+    `;
+    list.appendChild(el);
+  });
+  renderKeranjang();
+}
+
+function tambahKeranjang(i) {
+  keranjang.push(produk[i]);
+  renderKeranjang();
+  playClick();
+}
+
+function renderKeranjang() {
+  const wrap = document.getElementById("keranjangList");
+  wrap.innerHTML = "";
+  let total = 0;
+  keranjang.forEach((item, index) => {
+    total += item.harga;
+    const el = document.createElement("div");
+    el.className = "keranjang-item";
+    el.innerHTML = `
+      ${item.nama} - Rp${item.harga.toLocaleString()}
+      <button onclick="hapusItem(${index})" style="color:red;">X</button>
+    `;
+    wrap.appendChild(el);
+  });
+
+  let diskon = total >= 100000 ? total * 0.1 : 0;
+  document.getElementById("diskonInfo").innerHTML = `
+    <p>Total: <b>Rp${total.toLocaleString()}</b></p>
+    <p>Diskon: <b>Rp${diskon.toLocaleString()}</b></p>
+    <p><b>Total Bayar: Rp${(total - diskon).toLocaleString()}</b></p>
+  `;
+}
+
+function hapusItem(i) {
+  keranjang.splice(i, 1);
+  renderKeranjang();
+}
+
+function checkout() {
+  if (keranjang.length === 0) return alert("Keranjang kosong!");
+  playClick(); audioSuccess.play();
+  let pesan = `Halo saya ${namaUser}, saya ingin membeli:\n\n`;
+  let total = 0;
+  keranjang.forEach((p, i) => {
+    pesan += `- ${p.nama} = Rp${p.harga.toLocaleString()}\n`;
+    total += p.harga;
+  });
+  let diskon = total >= 100000 ? total * 0.1 : 0;
+  let bayar = total - diskon;
+  pesan += `\nTotal: Rp${total.toLocaleString()}`;
+  if (diskon > 0) pesan += `\nDiskon: Rp${diskon.toLocaleString()}`;
+  pesan += `\nTotal Bayar: Rp${bayar.toLocaleString()}`;
+  showPopupSukses("✅ Checkout berhasil. Mengarah ke WhatsApp...");
+  const url = "https://wa.me/6288989566141?text=" + encodeURIComponent(pesan);
+  setTimeout(() => { window.open(url, '_blank'); }, 800);
+}
+
+function beliLangsung(i) {
+  playClick(); audioSuccess.play();
+  const produkItem = produk[i];
+  const pesan = `Halo saya ${namaUser}, saya ingin membeli:\n\n` +
+                `- ${produkItem.nama} = Rp${produkItem.harga.toLocaleString()}\n\n` +
+                `Total: Rp${produkItem.harga.toLocaleString()}`;
+  showPopupSukses("✅ Berhasil mengarahkan ke WhatsApp...");
+  const url = "https://wa.me/6288989566141?text=" + encodeURIComponent(pesan);
+  setTimeout(() => { window.open(url, '_blank'); }, 800);
+}
+
+function playClick() {
+  audioClick.currentTime = 0;
+  audioClick.play();
+  if (navigator.vibrate) navigator.vibrate(100);
+}
+
+function showPopupSukses(pesan) {
+  const div = document.createElement("div");
+  div.innerText = pesan;
+  div.style.position = "fixed";
+  div.style.top = "20px";
+  div.style.right = "20px";
+  div.style.padding = "15px 20px";
+  div.style.background = "#00c851";
+  div.style.color = "#fff";
+  div.style.fontWeight = "bold";
+  div.style.borderRadius = "10px";
+  div.style.boxShadow = "0 0 10px rgba(0,0,0,0.3)";
+  div.style.zIndex = "9999";
+  document.body.appendChild(div);
+  setTimeout(() => div.remove(), 3000);
+}
+
+// Grafik statistik
+const dataPenjualan = [...Array(30)].map((_, i) => {
+  const d = new Date(2025, 6, i+1);
+  const tgl = d.toISOString().split("T")[0];
+  return { tanggal: tgl, total: Math.floor(Math.random() * 150000) + 10000 };
 });
 
-const produkData = [
-  { nama: "Script WhatsApp Bot", harga: 50000 },
-  { nama: "Script Telegram Auto Reply", harga: 45000 },
-  { nama: "Obfuscator JS", harga: 60000 },
-  { nama: "Panel Web Payment", harga: 70000 },
-  { nama: "Script SlayerV4", harga: 25000 },
-  { nama: "Admin Panel Private", harga: 20000 },
-  { nama: "Admin Panel Public", harga: 15000 },
-  { nama: "Panel Unlimited", harga: 10000 }
-];
-
-function tampilkanProduk() {
-  const produkList = document.getElementById("produkList");
-  produkList.innerHTML = "";
-  produkData.forEach(p => {
-    const item = document.createElement("div");
-    item.className = "produk-item";
-    item.innerHTML = `<h3>${p.nama}</h3><p>Rp${p.harga.toLocaleString()}</p>`;
-    produkList.appendChild(item);
+function filterStatistik() {
+  const from = document.getElementById("fromDate").value;
+  const to = document.getElementById("toDate").value;
+  if (!from || !to) return alert("Pilih rentang tanggal!");
+  const filtered = dataPenjualan.filter(d => d.tanggal >= from && d.tanggal <= to);
+  const labels = filtered.map(d => d.tanggal);
+  const values = filtered.map(d => d.total);
+  const ctx = document.getElementById("chartPenjualan").getContext("2d");
+  if (window.penjualanChart) window.penjualanChart.destroy();
+  window.penjualanChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: labels,
+      datasets: [{ label: 'Total Penjualan', backgroundColor: '#00ffccaa', data: values }]
+    },
+    options: { responsive: true, scales: { y: { beginAtZero: true } } }
   });
 }
 
-function submitNama() {
-  const nama = document.getElementById("inputNama").value.trim();
-  if (!nama) return alert("Masukkan nama!");
-  localStorage.setItem("namaUser", nama);
-  bukaHalamanProduk(nama);
-}
-
-function bukaHalamanProduk(nama) {
-  document.getElementById("loginPanel").style.display = "none";
-  document.getElementById("produkPanel").style.display = "flex";
-  document.getElementById("userNameLabel").innerText = nama;
-  tampilkanProduk();
-}
-
-function gantiNama() {
-  const namaBaru = prompt("Masukkan nama baru:");
-  if (namaBaru) {
-    localStorage.setItem("namaUser", namaBaru);
-    bukaHalamanProduk(namaBaru);
-  }
-}
-
-window.onload = () => {
-  const saved = localStorage.getItem("namaUser");
-  if (saved) bukaHalamanProduk(saved);
-};
+const audioClick = new Audio("https://assets.mixkit.co/sfx/preview/mixkit-select-click-1109.mp3");
+const audioSuccess = new Audio("https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3");
 </script>
-
 </body>
 </html>
